======= 5.0.0

- add logs analyzator
- add custom start scripts
- add CouchDB consumption
- add backuping of `applications.json`
- improve UI

======= 4.0.0

- renew Let's encrypt certificates
- watching SSL expiration
- improve UI
- update debug.js version
- add memory limit