@@ -1,0 +1,14 @@
+<div data-jc="form" data-title="@(Terminal output)" data-jc-path="common.form" data-if="value === 'applications-stdout'" data-width="800px" data-jc-id="applications.stdout">
+	<div data-jc="template" data-jc-path="applications.stdout" class="padding npt npb">
+		<script type="text/html">
+			<pre><code>{{ lines }}</code></pre>
+		</script>
+	</div>
+	<div class="ui-form-buttons center">
+		<button name="cancel" style="width:200px">@(Close)</button>
+	</div>
+</div>
+
+<script>
+	applications.stdout = {};
+</script>
